feat: add update and delete database
